csye6225-infra.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: AWS VPC creation using Cloud Formation 
Parameters:
  VPCCidrBlock:
    Description: "VPC Classless Inter-Domain Routing Block"
    Type: String
    Default: "10.0.0.0/16"
  CIDRBlocSubnet1: 
    Type: String
    Default: "10.1.1.0/16"
  CIDRBlocSubnet2: 
    Type: String
    Default: "10.1.2.0/16"
  CIDRBlocSubnet3: 
    Type: String
    Default: "10.1.3.0/16"
  AvailabilityZone1:
    Type: String
    Default: "a"
  AvailabilityZone2:
    Type: String
    Default: "b"
  AvailabilityZone3:
    Type: String
    Default: "c"
  AmiImageId:
    Type: String
    Default: ""
Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VPCCidrBlock    
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
      - Key: Name
        Value: 
          !Join
            - ''
            - - !Ref AWS::StackName
  mysubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      VpcId: !Ref myVPC
      CidrBlock: !Ref CIDRBlocSubnet1
      AvailabilityZone: 
        !Join
          - ''
          - - !Ref AWS::Region
            - !Ref AvailabilityZone1     # need to change
      Tags:
      - Key: Name
        Value: 
          !Join
            - ''
            - - !Ref AWS::StackName
              - !Ref AWS::Region
              - !Ref AvailabilityZone1     # need to change
  mysubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      VpcId: !Ref myVPC
      CidrBlock: !Ref CIDRBlocSubnet2
      AvailabilityZone: 
        !Join
          - ''
          - - !Ref AWS::Region
            - !Ref AvailabilityZone2   # need to change
      Tags:
      - Key: Name
        Value: 
          !Join
            - ''
            - - !Ref AWS::StackName
              - !Ref AWS::Region
              - !Ref AvailabilityZone2     # need to change
  mysubnet3:
    Type: AWS::EC2::Subnet
    Properties:
      MapPublicIpOnLaunch: true
      VpcId: !Ref myVPC
      CidrBlock: !Ref CIDRBlocSubnet3
      AvailabilityZone: 
        !Join
          - ''
          - - !Ref AWS::Region
            - !Ref AvailabilityZone3    #"us-east-1a"   # need to change   
      Tags:
      - Key: Name
        Value: 
          !Join
            - ''
            - - !Ref AWS::StackName
              - !Ref AWS::Region
              - !Ref AvailabilityZone3     # need to change
  myInternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
      - Key: Name
        Value: 
          !Join
            - ''
            - - !Ref AWS::StackName
              - !Ref AWS::Region
              - 'InternetGateway'
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    DependsOn:
      - myInternetGateway
    Properties:
      VpcId:
        Ref: myVPC
      InternetGatewayId:
        Ref: myInternetGateway
  myRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:  
        Ref: myVPC
      Tags:
      - Key: Name
        Value: 
          !Join
            - ''
            - - !Ref AWS::StackName
              - !Ref AWS::Region
              - 'RouteTable'
  mySubnetRouteTableAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - mysubnet1
      - myRouteTable
      - AttachGateway
    Properties:
      SubnetId:
        Ref: mysubnet1
      RouteTableId:
        Ref: myRouteTable
  mySubnetRouteTableAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - mysubnet2
      - myRouteTable
      - AttachGateway
    Properties:
      SubnetId:
        Ref: mysubnet2
      RouteTableId:
        Ref: myRouteTable
  mySubnetRouteTableAssociation3:
    Type: AWS::EC2::SubnetRouteTableAssociation
    DependsOn:
      - mysubnet3
      - myRouteTable
      - AttachGateway
    Properties:
      SubnetId:
        Ref: mysubnet3
      RouteTableId:
        Ref: myRouteTable
  myRoute:
    Type: AWS::EC2::Route
    DependsOn: 
      - myInternetGateway
      - myRouteTable
    Properties:
      RouteTableId:
        Ref: myRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: myInternetGateway   
  myApplicationSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Web application security group
      GroupName: application
      VpcId:
        Ref: myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 8081
          ToPort: 8081
          CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: !Sub '${AWS::StackName}-application-security-group'
  # myEC2Instance:
  #   Type: AWS::EC2::Instance
  #   Properties:
  #     ImageId: !Ref AmiImageId
  #     InstanceType: "t2.micro"
  #     SubnetId: !Ref mysubnet1
  #     SecurityGroupIds: [!Ref myApplicationSecurityGroup]
  #     DisableApiTermination: "false"
  #     BlockDeviceMappings:
  #     - DeviceName: "/dev/xvda"
  #       Ebs: 
  #         VolumeType: "gp2"
  #         DeleteOnTermination: "true"
  #         VolumeSize: "20"


  S3Bucket:
    Type: "AWS::S3::Bucket"
    Properties:
      BucketName: !Join
        - ""
        - - !Select [2, !Split [/, !Ref AWS::StackId ]]
          - ".dev.ebenezerwilliams.me"
      PublicAccessBlockConfiguration: 
          BlockPublicAcls: true
          BlockPublicPolicy: true
          IgnorePublicAcls: true
          RestrictPublicBuckets: true
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: 'aws:kms'
            BucketKeyEnabled: true
      LifecycleConfiguration: 
        Rules: 
          -
            Id: "StandardIARule"
            Status: "Enabled"
            Transitions:
              - StorageClass: "STANDARD_IA"
                TransitionInDays: "30"
    DeletionPolicy: "Delete"

  DatabaseSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    DependsOn: "myVPC"
    Properties:
      GroupDescription: "Allow traffic to DB from only application instances"
      GroupName: "database"
      VpcId:
         Ref: "myVPC"
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "3306"
          ToPort: "3306"
          SourceSecurityGroupId:
            Ref: "myApplicationSecurityGroup"
      Tags:
          -
            Key: "Name"
            Value: "database"

  DBParameterGroup:
    Type: "AWS::RDS::DBParameterGroup"
    Properties:
      Description: "This is the parameter group for MySQL DB."
      Family: "mysql8.0"
      Tags:
          -
            Key: "Name"
            Value: "DBParameterGroup"

  DBSubnetGroup: 
    Type: "AWS::RDS::DBSubnetGroup"
    DependsOn:
      - mysubnet1
      - mysubnet2
      - mysubnet3
    Properties: 
      DBSubnetGroupDescription: "The DB subnet group for the RDS instance."
      DBSubnetGroupName: "DBSubnetGroup"
      SubnetIds: 
        - !Ref "mysubnet1"
        - !Ref "mysubnet2"
        - !Ref "mysubnet3"
      Tags: 
        - 
          Key: "Name"
          Value: "DB Subnet Group"
    
  RDSInstance:
    Type: "AWS::RDS::DBInstance"
    DependsOn: 
      - "DBSubnetGroup"
      - "DatabaseSecurityGroup"
    Properties:
      Engine: "mysql"
      DBInstanceClass: "db.t2.micro"
      MultiAZ: "false"
      AllocatedStorage : "20"
      DBInstanceIdentifier: "csye6225"
      MasterUsername: "csye6225"
      MasterUserPassword: "MyPassword123"
      VPCSecurityGroups:
        - !Ref "DatabaseSecurityGroup"
      DBSubnetGroupName: !Ref DBSubnetGroup
      DBParameterGroupName: !Ref DBParameterGroup
      PubliclyAccessible: false
      DBName: "csye6225"


  WebAppS3Policy:
    Type: AWS::IAM::Policy
    DependsOn: S3Bucket
    Properties:
        PolicyDocument:
          Version: '2012-10-17'
          Statement:
            - Effect: Allow
              Action:
                - 's3:PutObject'
                - 's3:GetObject'
                - 's3:DeleteObject'
              Resource:
                - !GetAtt S3Bucket.Arn
                - Fn::Join:
                  - ''
                  - - !GetAtt S3Bucket.Arn
                    - "/*"
        PolicyName: WebAppS3
        Roles:
          - Ref: EC2Role

  EC2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
              - ec2.amazonaws.com
            Action: sts:AssumeRole
      RoleName: "EC2-CSYE6225"
      Tags:
      - 
        Key: Name
        Value: EC2Role
      Path: "/" 

  EC2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: "/"
      Roles:
      - Ref: EC2Role

  MyEC2Instance: 
    Type: "AWS::EC2::Instance"
    DependsOn: "RDSInstance"
    Properties: 
      ImageId: !Ref AmiImageId
      InstanceType : "t2.micro"
      DisableApiTermination : "false"
      KeyName: "ebbyec2ami"
      SecurityGroupIds:
        - !Ref "myApplicationSecurityGroup"
      SubnetId: !Ref "mysubnet1"
      BlockDeviceMappings: 
        - DeviceName: "/dev/xvda"
          Ebs: 
            VolumeType: "gp2"
            DeleteOnTermination: "true"
            VolumeSize: "20"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/sh
          cd /etc/profile.d
          touch custom.sh               
          echo export MYSQL_HOST=${RDSInstance.Endpoint.Address} >> custom.sh
          echo export MYSQL_USER=csye6225 >> custom.sh
          echo export MYSQL_PASSWORD=MyPassword123 >> custom.sh
          echo export MYSQL_DATABASE=csye6225 >> custom.sh
          echo export S3_BUCKETNAME=${S3Bucket} >> custom.sh
          cd /etc/systemd/system
          touch db.env
          echo MYSQL_HOST=${RDSInstance.Endpoint.Address} >> db.env
          echo MYSQL_USER=csye6225 >> db.env
          echo MYSQL_PASSWORD=MyPassword123 >> db.env
          echo MYSQL_DATABASE=csye6225 >> db.env
          echo S3_BUCKETNAME=${S3Bucket} >> db.env
      IamInstanceProfile: !Ref EC2InstanceProfile
      Tags:
          -
            Key: "Name"
            Value: !Join
              - ''
              - - !Ref  "AWS::StackName"
                - "-"
                - 'EC2'



Outputs:
  StackVPC:
    Description: The ID of the VPC
    Value: !Ref myVPC
    Export:
      Name: !Sub "${AWS::StackName}-VPCID"
